--- a/keymap.dtsi
+++ b/keymap.dtsi
@@ -2,6 +2,7 @@
 // For example, here are the main optional features you can enable:
 #define DIFFICULTY_LEVEL  3 // 0:custom, 1:easy -> 5:hard (see below)
 #define ENFORCE_BILATERAL   // cancels single-handed home row mod+tap
+#define HOMEY_HOLDING_TIME 400
 // TIP: Add more setting overrides here instead of editing them below.
 
 //////////////////////////////////////////////////////////////////////////////
