--- a/keymap.dtsi
+++ b/keymap.dtsi
@@ -1,8 +1,11 @@
 // NOTE: Use the `#define` settings below to customize this keymap!
 // For example, here are the main optional features you can enable:
-#define DIFFICULTY_LEVEL  3 // 0:custom, 1:easy -> 5:hard (see below)
+#define DIFFICULTY_LEVEL  0 // 0:custom, 1:easy -> 5:hard (see below)
 #define ENFORCE_BILATERAL   // cancels single-handed home row mod+tap
 #define HOMEY_HOLDING_TIME 400
+#define INDEX_HOLDING_TIME 200
+#define PLAIN_HOLDING_TIME 200
+#define SPACE_HOLDING_TIME 200
 // TIP: Add more setting overrides here instead of editing them below.
 
 //////////////////////////////////////////////////////////////////////////////
