--- a/keymap.dtsi
+++ b/keymap.dtsi
@@ -1,11 +1,13 @@
 // NOTE: Use the `#define` settings below to customize this keymap!
 // For example, here are the main optional features you can enable:
-#define DIFFICULTY_LEVEL  0 // 0:custom, 1:easy -> 5:hard (see below)
+#define DIFFICULTY_LEVEL  3 // 0:custom, 1:easy -> 5:hard (see below)
 #define ENFORCE_BILATERAL   // cancels single-handed home row mod+tap
 //#define WORLD_USE_COMPOSE   // use native Compose in place of Unicode
 
-#define PINKY_HOLDING_TIME 350
-#define RING1_HOLDING_TIME 350
+#define PINKY_HOLDING_TIME 300
+#define RING1_HOLDING_TIME 300
+#define STICKY_1SHOT_DECAY 2500
+#define THUMB_ESC_HOLDING_TIME 400
 
 // TIP: Add more setting overrides here instead of editing them below.
 
@@ -935,36 +937,7 @@
 #define KEY_RH_C6R6 0
 #endif
 
-combos {
-    compatible = "zmk,combos";
-
-    //
-    // COMBO_FIRING_DECAY defines how much time you have left (milliseconds)
-    // after pressing the first key in a ZMK combo to finish the whole chord.
-    //
-    #ifndef COMBO_FIRING_DECAY
-    #define COMBO_FIRING_DECAY 50
-    #endif
-    #ifdef LAYER_Gaming
-    combo_gaming_layer_toggle {
-        timeout-ms = <COMBO_FIRING_DECAY>;
-        key-positions = <POS_LH_T3 POS_LH_T6>;
-        bindings = <&tog LAYER_Gaming>;
-        layers = <0 LAYER_Gaming>;
-    };
-    #endif
-    #ifdef _A_TAB
-    combo_alt_tab_switcher {
-        timeout-ms = <COMBO_FIRING_DECAY>;
-        key-positions = <POS_LH_T4 POS_LH_T1>;
-        bindings = <&mod_tab_chord _A_TAB LAYER_Cursor>;
-        layers = <0 1 2 3 4 5 6 7 8>;
-    };
-    #endif
-};
-
 behaviors {
-
     //////////////////////////////////////////////////////////////////////////
     //
     // Miryoku layers and home row mods (ported from my QMK endgame)
@@ -3884,7 +3857,7 @@ behaviors {
         #binding-cells = <2>;
         bindings = <&mo>, <&kp>;
     };
-    thumb_parang_left: thumb_layer_access_parang_left {
+   thumb_parang_left: thumb_layer_access_parang_left {
         compatible = "zmk,behavior-hold-tap";
         flavor = THUMB_HOLDING_TYPE;
         tapping-term-ms = <THUMB_HOLDING_TIME>;
@@ -3907,6 +3880,34 @@ behaviors {
         #binding-cells = <2>;
         bindings = <&mo>, <&kp>;
     };
+    thumb_kp_kp: thumb_kp_kp_access {
+        compatible = "zmk,behavior-hold-tap";
+        flavor = "hold-preferred";
+        tapping-term-ms = <THUMB_HOLDING_TIME>;
+        quick-tap-ms = <THUMB_REPEAT_DECAY>; // enable repeat
+        #binding-cells = <2>;
+        bindings = <&kp>, <&kp>;
+    };
+    thumb_esc_to: thumb_esc_to_access {
+        compatible = "zmk,behavior-hold-tap";
+        flavor = "tap-preferred";
+        tapping-term-ms = <THUMB_ESC_HOLDING_TIME>;
+        #binding-cells = <2>;
+        bindings = <&kp>, <&to>;
+    };
+    to_home: to_home {
+        compatible = "zmk,behavior-macro";
+        #binding-cells = <0>;
+        bindings = <&kp F24 &to 0>;
+    };
+    thumb_enter_home: thumb_spc_home {
+        compatible = "zmk,behavior-hold-tap";
+        flavor = "tap-preferred";
+        tapping-term-ms = <THUMB_ESC_HOLDING_TIME>;
+        #binding-cells = <2>;
+        bindings = <&kp>, <&to_home>;
+    };
+
 
     //
     // Shift + LEFT_PARENTHESIS = LESS_THAN
